ts-19: fix layout overflow styles

--- a/src/styles/mixins/text-styles.scss
+++ b/src/styles/mixins/text-styles.scss
@@ -4,5 +4,5 @@
   text-align: center;
   font-size: $base-font-size;
   font-weight: bold;
-  padding: $default-padding 0;
+  padding: 0 0 $default-padding 0;
 }
